--- a/CIMS-J5/.project
+++ b/CIMS-J5/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>CIMS-J5</name>
+	<name>CIMS</name>
 	<comment></comment>
 	<projects>
 	</projects>
